--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,16 +3,21 @@ html {
   font-family: 'Special Elite', 'Oswald'
 }
 
+/* Google fonts. */
+html {
+  font-family: 'Special Elite', 'Oswald'
+}
+
 /* Header CSS Begins */
 #header {
-  z-index: 9;
+  display:flex;
+  justify-content:space-between;
 }
 
 #header h1 {
   font-size: 3vw;
   margin-left: 100px;
   margin-top: 30px;
-  float: left;
   display: inline-block;
 }
 
@@ -26,7 +31,6 @@ html {
 ul {
   list-style-type: none;
   display: inline-block;
-  float: right;
   overflow: hidden;
   position: -webkit-sticky; /* Safari */
   position: sticky;
