--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,15 +3,21 @@ html {
   font-family: 'Special Elite', 'Oswald'
 }
 
-/* Google fonts. */
-html {
-  font-family: 'Special Elite', 'Oswald'
+body {
+  background-image: url(../images/cafe-background.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
 }
 
 /* Header CSS Begins */
 #header {
-  display:flex;
-  justify-content:space-between;
+  display: flex;
+  justify-content: space-between;
+}
+
+#header a {
+  color: white;
 }
 
 #header h1 {
@@ -23,7 +29,6 @@ html {
 
 #header h1 a {
   text-decoration: none;
-  color: #333;
 }
 /* Header CSS Ends */
 
@@ -46,13 +51,27 @@ li a {
   margin-right: 50px;
   margin-top: 20px;
   display: block;
-  color: #333;
+  color: white;
   text-align: center;
   padding: 16px;
   text-decoration: none;
 }
 
 li a:hover {
-  text-shadow: 1px 1px #333;
+  text-shadow: 5px 5px #333;
 }
 /* Navbar CSS Ends */
+
+/* Section Content Begins */
+
+.section {
+  width: 940px;
+  margin: 0 auto;
+  height: 40vh;
+}
+
+#since-2018 {
+  font-size: 50px;
+  color: white;
+  text-shadow: 2px 2px #333;
+}
