--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,10 +16,7 @@ body {
 #header {
   display: flex;
   justify-content: space-between;
-  background:rgba(255, 255, 255, 0.3);
-  position: fixed;
-  right: 0;
-  left: 0;   
+  background:rgba(255, 255, 255, 0.5);  
 }
 
 #header a {
@@ -27,10 +24,21 @@ body {
 }
 
 #header h1 {
-  font-size: 3vw;
+  font-size: 4vw;
   margin-left: 100px;
   margin-top: 20px;
   display: inline-block;
+}
+
+@media screen and (max-width: 700px) {
+  #header h1 {
+    font-size: 6vw;
+    margin-left: 50px;
+  }
+}
+
+#header h1:hover {
+  text-shadow: 6px 6px #333;
 }
 
 #header h1 a {
@@ -41,26 +49,28 @@ body {
 /* Navbar CSS Begins */
 ul {
   list-style-type: none;
-  display: inline-block;
-  overflow: hidden;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
   top: 0; 
+  display: flex;
 }
 
 li {
-  float: right;
+  flex: 3;
 }
 
 li a {
-  font-size: 1.5vw;
+  font-size: 2.5vw;
   margin-right: 50px;
   margin-top: 20px;
   display: block;
   color: white;
   text-align: center;
-  padding: 16px;
   text-decoration: none;
+}
+
+@media screen and (max-width: 700px) {
+  li a {
+    font-size: 6vw;
+  }
 }
 
 li a:hover {
@@ -85,22 +95,23 @@ li a:hover {
   color: white;
   text-shadow: 2px 2px #333;
 }
-/* Section 1 Content Ends */
 
-.wrapper {
-  background-color: #131313;
-  height: 66vh;
-  color: white;
-  letter-spacing: 3px;
-}
-
-@media screen and (min-width: 900px) {
-  .wrapper {
-    padding-bottom: 90px;
+@media screen and (max-width: 700px) {
+  #since-2018 {
+    text-align: left;
+    margin-left: 10px;
+    font-size: 8vw;
   }
 }
 
+
+/* Section 1 Content Ends */
+
 /* Section 2 Content Begins (About Us..) */
+#aboutAndNews {
+  background-color: #585858;
+}
+
 .about {
   padding: 10px;
 }
@@ -117,6 +128,10 @@ li a:hover {
 /* Section 2 Content Ends */
 
 /* Section 3 Content Begins (News) */
+.news {
+  box-sizing: border-box;
+}
+
 .news h2, h3 {
   margin-left: 30px;
 }
@@ -124,7 +139,8 @@ li a:hover {
 .news p {
   margin-left: 30px;
   font-family: 'Osawld';
-  font-size: 20px;;
+  font-size: 20px;
+  padding-bottom: 0;
 }
 /* Section 3 Content Ends */
 
@@ -155,5 +171,6 @@ input[type=submit]:hover {
   padding: 20px;
   background-color: #333;
   font-family: 'Oswald';
+  display: block;
 }
 /* Section 4 Content Ends */
